Glitch in baking a mixed SSS shader #40322

Closed
opened 2014-05-22 23:28:33 +02:00 by Daniel Salazar · 19 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC
AMD FX-8350

Blender Version

Broken: 0865b4f

Short description of error

Dark areas appear in the mix area that are not there in the rendered shader

Exact steps for others to reproduce the error

Press bake on this file Bake_Debug.blend

After it finishes, notice how there is a dark area around the face opening and in the antenas.
This are the areas where the shader mix happens based on vertex colors, however I can discard vertex colors being the culprit since I have tested with image textures wit the same result.

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC AMD FX-8350 **Blender Version** Broken: 0865b4f **Short description of error** Dark areas appear in the mix area that are not there in the rendered shader **Exact steps for others to reproduce the error** Press bake on this file [Bake_Debug.blend](https://archive.blender.org/developer/F89746/Bake_Debug.blend) After it finishes, notice how there is a dark area around the face opening and in the antenas. This are the areas where the shader mix happens based on vertex colors, however I can discard vertex colors being the culprit since I have tested with image textures wit the same result.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Daniel Salazar 2014-05-22 23:28:33 +02:00
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Simplified it to a single plane (and replaced the vcol with a texture just to make sure that wasn't the issue) - Bake_DebugPlane.blend

Simplified it to a single plane (and replaced the vcol with a texture just to make sure that wasn't the issue) - [Bake_DebugPlane.blend](https://archive.blender.org/developer/F89756/Bake_DebugPlane.blend)

This issue was referenced by 81b129d3b8

This issue was referenced by 81b129d3b837e31c0d6d2a9d2a6e39d39e47c1ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 81b129d3b8.

Closed by commit 81b129d3b8.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @brecht

Added subscriber: @brecht

@brecht do you have any thoughts on that? (see 81b129d3b8). The commit seemed to yield correct results and branched path was handling that this way as well already (was this intentional or an oversight?).

But according to @zanqdo real production file, there is still an issue (instead of getting dark areas he now gets over bright areas). To be honest I get over bright areas in some cases with regular path, but branched path is always correct in my simple sample file. So something may still be broken.

@brecht do you have any thoughts on that? (see 81b129d3b837). The commit seemed to yield correct results and branched path was handling that this way as well already (was this intentional or an oversight?). But according to @zanqdo real production file, there is still an issue (instead of getting dark areas he now gets over bright areas). To be honest I get over bright areas in some cases with regular path, but branched path is always correct in my simple sample file. So something may still be broken.

Branched path tracing does it different and always traces rays for both, it intentionally works different.

I can't see immediately what's wrong here, but all that should be needed is to match the path and branched path code in kernel_path.h. This 81b129d3b8 fix is definitely wrong because it should do one or the other.

Branched path tracing does it different and always traces rays for both, it intentionally works different. I can't see immediately what's wrong here, but all that should be needed is to match the path and branched path code in kernel_path.h. This 81b129d3b837 fix is definitely wrong because it should do one or the other.

This issue was referenced by b3f9117523

This issue was referenced by b3f9117523d33568c6a8df1a34bbb695d3d53e1e

ok, reverted 81b129d3b8. I did some tests and the issue doesn't seem to be the kernel_path_subsurface_scatter/kernel_branched_path_subsurface_scatter differences, but the kernel_path_integrate_lighting/kernel_branched_path_integrate_lighting instead. I'll look at that later.

ok, reverted 81b129d3b837. I did some tests and the issue doesn't seem to be the **kernel_path_subsurface_scatter**/**kernel_branched_path_subsurface_scatter** differences, but the **kernel_path_integrate_lighting**/**kernel_branched_path_integrate_lighting** instead. I'll look at that later.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b3f9117523.

Closed by commit b3f9117523.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

This issue was referenced by 0efc0d5200

This issue was referenced by 0efc0d5200416f98a9dc4fb4685382b3cf8f68cc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0efc0d5200.

Closed by commit 0efc0d5200.

@brecht alright, it should be fixed now. It was simpler than I thought in the end. Thanks :)
@zanqdo can you please test with your production file? (branched path should've worked though by the way)

@brecht alright, it should be fixed now. It was simpler than I thought in the end. Thanks :) @zanqdo can you please test with your production file? (branched path should've worked though by the way)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40322
No description provided.