Cycles-Bake: fix T40322 Glitch in baking a mixed SSS shader

If we are using a mix node we still need to evaluate the BSDF lighting
even if scattering is successful.

Note: this was working for branched path (probably an oversight when
branched path support was introduced for baking, a good oversight though
;)